--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="https://kyoheria.github.io/freetownWeather/">FREETOWN</a>
   </div>
   <div class="w3-col w3-container m4 l6 w3-center">  
-    <a href="https://kyoheria.github.io/newyorkWeather/">FREETOWN</a>
+    <a href="https://kyoheria.github.io/newyorkWeather/">NEW YORK</a>
   </div>
 
 
