--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         border: 2px solid white;
         color: white;
     }
+    img { 
+      width: 80%; 
+    }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -78,6 +81,18 @@
     </div>
 
   </div>
+
+  <div class="w3-container w3-dark-grey">
+    <h1 class=w3-center>Work Flow</h1>
+  </div>
+  <div class="w3-container w3-center">
+    <img src="map1.jpg">
+    <img src="map2.jpg">
+    <img src="map3.jpg">
+  </div>
+
+
+
 
 </body>
 </html>
